[tool.poetry]
name = "sizefs"
version = "0.4.0"
description = "SizeFS is a mock filesystem for creating files of particular sizes with specified contents."
authors = ["Sohonet <dev@sohonet.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fusepy = "2.0.4"
docopt = "0.6.2"
fs = "2.4.16"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
mock = "^5.1.0"
tox = "^4.14.1"
black = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 120